# pyldpc

./: README.md  pyproject.toml
.github/workflows/: test.yml
examples/: plot_coding_decoding_simulation.py  plot_image_transmission.py  plot_parallel_decoding.py  plot_rectangle_image_transmission.py
src/pyldpc/: __init__.py  code.py  decoder.py  encoder.py  ldpc_audio.py  ldpc_images.py  utils.py  utils_audio.py  utils_img.py
tests/: test_audio.py  test_code.py  test_decoding.py  test_image.py
