[project]
name = "pyldpc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Hicham Janati", email = "hicham.janati100@gmail.com" }]
requires-python = ">=3.8"
dependencies = ["numba>=0.58.1", "numpy>=1.24.4", "scipy>=1.10.1"]

[project.scripts]
pyldpc = "pyldpc:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "download>=0.3.5",
    "matplotlib>=3.7.5",
    "numpydoc>=1.7.0",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "sphinx>=7.1.2",
    "sphinx-gallery>=0.18.0",
    "sphinx-rtd-theme>=3.0.2",
    "ruff>=0.8.1",
]

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = [
    "F", # pyflakes
    "E", # pycodestyle
    "W", # pycodestyle warnings
    "I", # isort
]
ignore = [
    "E501", # line too long
]

[tool.ruff]
extend-include = ["*.ipynb"]
exclude = ["docs"]
line-length = 99